# deepowl

./: .gitignore  CONTEXT.md  README.md  index.html  pyproject.toml
deepowl/: cli.py  config.py  llm.py
deepowl/graph/: builder.py
deepowl/ingest/: chunker.py  embedder.py  parser.py
deepowl/memory/: progress.py
deepowl/teaching/: curriculum.py  tutor.py
